# noaa-gml-file-reader

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: api.rst  conf.py  requirements.txt
noaa_esrl_gmd_file_reader/: __init__.py
noaa_gml_file_reader/: __init__.py  _reader.py
tests/: test_reader.py
tests/fixtures/: README.md  ch4_mlo_surface-flask_1_ccgg_event.txt  ch4_mlo_surface-flask_1_ccgg_month.txt  co2_mlo_surface-flask_1_ccgg_event.txt  co2_mlo_surface-flask_1_ccgg_month.txt  co2_mlo_surface-insitu_1_ccgg_HourlyData.txt
tools/: validate_distributions.py
